--- a/src/static/index.html
+++ b/src/static/index.html
@@ -4,48 +4,79 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Social Links</title>
-    <link rel="stylesheet" href="styles/styles.css">
+    <title>Waffle Recipe</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+    rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <main>
-        <section class="picture-container">
-            <div class="picture-wrapper">
-                <img class="picture" src="https://pbs.twimg.com/profile_images/1565279899472089088/RRnObWo9_400x400.jpg">
-            </div>
-            <a href="https://twitter.com/Matth33w_Dev" class="social-tag">@Matth33w_Dev</a>
+        <section>
+            <h1>Classic Waffle</h1>
+            <figure>
+                <img src="https://p2.trrsf.com/image/fget/cf/1200/1200/middle/images.terra.com/2022/04/12/1544419827-aprenda-como-fazer-waffle-fonte-swiggy-500x500.jpg" alt="Waffle Clássico">
+                <figcaption>Classic waffle recipe</figcaption>
+            </figure>
         </section>
-        <section class="social-links">
+        <section>
+            <h3>Ingredients</h3>
             <ul>
                 <li>
-                    <a class="social-button" href="https://www.matth33w.com/" target="_blank">Website</a>
+                    2 teacups of flour
                 </li>
                 <li>
-                    <a class="social-button" href="https://twitter.com/Matth33w_Dev" target="_blank">Twitter</a>
+                    2 tablespoons of sugar
                 </li>
                 <li>
-                    <a class="social-button" href="https://gamejolt.com/@Matth33w" target="_blank">Gamejolt</a>
+                    2 teaspoons of baking powder
                 </li>
                 <li>
-                    <a class="social-button" href="https://www.facebook.com/profile.php?id=100086996331557" target="_blank">Facebook Page</a>
+                    1/2 teaspoons of salt
+                </li>
+                <li>
+                    2 spoons of corn starch
+                </li>
+                <li>
+                    3 beaten eggs
+                </li>
+                <li>
+                    4 tablespoons of melted butter without salt
+                </li>
+                <li>
+                    1 and 3/4 teacups of milk
+                </li>
+                <li>
+                    1 tablespoon of vanilla essence
                 </li>
             </ul>
         </section>
-        <section class="social-icons">
-            <ul>
+        <section>
+            <h3>Preparation method</h3>
+            <ol>
                 <li>
-                    <a class="social-icon" href="https://www.matth33w.com/" target="_blank"><img src="img/website.svg"/></a>
+                    Sift the wheat flour, sugar, starch, yeast and salt into a container. Reserve.
                 </li>
                 <li>
-                    <a class="social-icon" href="https://twitter.com/Matth33w_Dev" target="_blank"><img src="img/twitter.svg"/></a>
+                    In another container mix the beaten eggs with the milk, the melted butter and the vanilla essence.
                 </li>
                 <li>
-                    <a class="social-icon" href="https://gamejolt.com/@Matth33w" target="_blank"><img src="img/gamejolt.svg"/></a>
+                    Pour over the flour mixture and quickly incorporate the ingredients.
                 </li>
                 <li>
-                    <a class="social-icon" href="https://www.facebook.com/profile.php?id=100086996331557" target="_blank"><img src="img/facebook.svg"/></a>
+                    Heat the waffle maker. Place a shallow shell of dough and spread it until it covers the mold of the device, close the lid and let it bake until the dough is golden brown.
                 </li>
-            </ul>
+                <li>
+                    Remove with silicone spatulas. Serve with honey, fruit or jam.
+                </li>
+            </ol>
+        </section>
+        <section>
+            <h3>Additional information</h3>
+            <p>You can serve these waffles on breakfast with jam.</p>
         </section>
     </main>
 </body>
